--- a/Assets/adminui/sass/_section.sass
+++ b/Assets/adminui/sass/_section.sass
@@ -197,7 +197,7 @@ table.result
       background-color: #bbb
       color: #000
   td
-    text-align: center
+    text-align: left
     vertical-align: middle
     padding: 3px 0px
   th
@@ -210,6 +210,7 @@ table.result
 
 .column-header
   position: relative
+  text-align: center
 
 .column-sort-asc
   float: right
